--- a/.github/workflows/ci-all_version.yml
+++ b/.github/workflows/ci-all_version.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout rclex repo
         uses: actions/checkout@v4
         with:
-          repository: rclex/rclex
+          repository: FelixPe/rclex
           path: rclex
 
       - name: Checkout rclex_connection_tests repo
